frontend/src/pages/flip.css
.flip {

    &__page {
        background: black;

        .loader__wrapper {
            min-height: 100vh;
            min-width: 100vw;
            display: flex;
            justify-content: center;
            align-items: center;
            stroke: #BDFFF8;
        }

        .nav__wrapper {
            &:not(.nav__wrapper_open-menu) {
                background-color: rgba(0, 0, 0, 0.7);
                color: #fff;
    
                .nav__center {
                    background-color: unset;
                }
            }
    
            .nav__indicator {
                -moz-transition: none; 
                -webkit-transition: none;  
                -ms-transition: none;  
                -o-transition: none;  
                transition: none; 
                background: #BDFFF8; 
            }
    
            .nav__list-item_active {
                color: #BDFFF8;
            }
    
            .nav__list-item{
                &:hover {
                    color: #BDFFF8 !important;
                }
            }
        }
    }

    &__wrapper {
        background: #030406;

        .scroll-bound {
            height: 550vh;
            
            .content {
                height: 100vh;
                width: 100%;
                position: sticky;
                top:0;
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;
            }
        }

        .footer__wrapper {
            background: #FFFFFF;
        }
    }

    &__text-wrapper {
        position: absolute;
        z-index: 100000;
        color: #FFFFFF;
        font-family: SB Sans Text;
        padding: 20px 50px 50px 50px;
        bottom: 0px;
        top: unset;
        display: flex;
        align-items: flex-start;
        width: 100%;
        justify-content: space-between;

        -moz-transition: transform 1s; 
        -webkit-transition: transform 1s;  
        -ms-transition: transform 1s;  
        -o-transition: transform 1s;  
        transition: transform 1s;  

        @media (max-width: 850px) {
            padding: 10px;
        }

        .flip__screen-text_primary {
            -moz-transition: opacity 0.5s ease-in-out; 
            -webkit-transition: opacity 0.5s ease-in-out;  
            -ms-transition: opacity 0.5s ease-in-out;  
            -o-transition: opacity 0.5s ease-in-out;  
            transition: opacity 0.5s ease-in-out; 
        }

        &_secondary {
            opacity: 0;

            -moz-transition: opacity 0.5s ease-in-out; 
            -webkit-transition: opacity 0.5s ease-in-out;  
            -ms-transition: opacity 0.5s ease-in-out;  
            -o-transition: opacity 0.5s ease-in-out;  
            transition: opacity 0.5s ease-in-out; 
        }
    }

    &__screen-header {
        font-size: 47px;
        line-height: 48px;
        letter-spacing: -0.01em;
        max-width: 1000px;

        span {
            color: #BDFFF8;
        }

        @media (max-width: 1100px) {
            font-size: 40px;
            line-height: 42px;
            max-width: 700px;
        }

        @media (max-width: 1024px) {
            font-size: 30px;
            line-height: 32px;
            max-width: 700px;
        }

        @media (max-width: 860px) {
            font-size: 26px;
            line-height: 28px;
            max-width: 500px;
        }

        @media (max-width: 805px) {
            font-size: 22px;
            line-height: 24px;
            max-width: 400px;
        }
    }

    &__screen-text {
        font-size: 16px;
        line-height: 18px;
        letter-spacing: -0.01em;
        opacity: 0.9;
        max-width: 340px;

        &_left {
            left: 20px;
        }

        &_right {
            right: 20px;
        }

        span {
            color: #BDFFF8;
        }

        b {
            font-size: 47px;
            line-height: 48px;
            letter-spacing: -0.01em;
            margin-bottom: 10px;
            font-weight: 300;
        }

        img {
            @media (max-width: 850px) {
                max-width: 180px;
            }
        }
    }

    &__logo {
        position: fixed;
        right: 55px;
        top: 86px;
        

        @media (max-width: 850px) {
            right: 10px;
            max-width: 180px;
        }
    }

    &__screen-background {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
}

.flip__wrapper_mobile {
    .flip__screen-wrapper {
        text-align: center;
    }
    .flip__logo {
        position: relative;
        right: unset;
        width: 300px;
        max-width: 300px;
        margin-bottom: 80px;
    }
    .flip__text-wrapper {
        position: unset;
        text-align: left;

        b {
            font-size: 27px;
            line-height: 30px;
            font-weight: 300;
        }
    }
    .flip__text-wrapper_secondary {
        display: flex;
        flex-direction: column;
        padding-bottom: 80px;

        .flip__screen-header_secondary {
            margin-bottom: 20px;
        }

        .flip__screen-text_primary {
            margin-bottom: 20px;
        }

        .flip__screen-logo {
            margin-top: 10px;
            width: 200px;
        }

        img {
            width: 80px;
        }
    }
    .footer__wrapper {
        background: black;
        color: white;

        .footer__link {
            color: black;
        }
    }
}

#bound-six {
    .flip__text-wrapper_secondary {
        flex-direction: column;

        .flip__screen-text {
            margin-bottom: 20px;
        }
    }
}

